GameOfLifeLab/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-sourcepath
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Echo2\Documents\GitHub\GridWorld;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab
-d
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
GameOfLifeLab
-windowtitle
GameOfLifeLab
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab/GameOfLifeTest.java
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab/GameOfLife.java
<---- end of javadoc command ---->
Loading source file C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLifeTest.java...
Loading source file C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java...
Constructing Javadoc information...
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLifeTest.java:6: error: package info.gridworld.actor does not exist
import info.gridworld.actor.Actor;
                           ^
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:1: error: package info.gridworld.actor does not exist
import info.gridworld.actor.Actor;
                           ^
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:2: error: package info.gridworld.actor does not exist
import info.gridworld.actor.ActorWorld;
                           ^
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:3: error: package info.gridworld.actor does not exist
import info.gridworld.actor.Rock;
                           ^
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:4: error: package info.gridworld.grid does not exist
import info.gridworld.grid.Grid;
                          ^
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:5: error: package info.gridworld.grid does not exist
import info.gridworld.grid.BoundedGrid;
                          ^
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:6: error: package info.gridworld.grid does not exist
import info.gridworld.grid.Location;
                          ^
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:19: error: cannot find symbol
    private ActorWorld world;
            ^
  symbol:   class ActorWorld
  location: class GameOfLife
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:167: error: cannot find symbol
    public Actor getActor(int row, int col)
           ^
  symbol:   class Actor
  location: class GameOfLife
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\GameOfLife.html...
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:31: warning - @post is an unknown tag.
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:115: warning - @pre is an unknown tag.
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:115: warning - @post is an unknown tag.
C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:167: warning - @pre is an unknown tag.
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\GameOfLifeTest.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\package-frame.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\package-summary.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\package-tree.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\constant-values.html...
Building index for all the packages and classes...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\overview-tree.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\index-all.html...
Building index for all classes...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\allclasses-frame.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\allclasses-noframe.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\index.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\help-doc.html...
Generating C:\Users\Echo2\Documents\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\stylesheet.css...
13 warnings
